tests/invalid/getopt_io_old.err_exp
getopt_io_old.m:022: In clause for predicate `main'/2:
getopt_io_old.m:022:   error: wrong number of arguments ([38;5;203m6[39;49m; should be [38;5;40m4[39;49m or [38;5;40m5[39;49m)
getopt_io_old.m:022:   in call to predicate `process_options'.
getopt_io_old.m:022:   [38;5;226mOne possible reason for the error is that the predicate[39;49m
getopt_io_old.m:022:   [38;5;226min the `getopt_io' module that used to be named[39;49m
getopt_io_old.m:022:   [38;5;226m`process_options' has been renamed to[39;49m
getopt_io_old.m:022:   [38;5;226m`process_options_io'.[39;49m
